--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -1,22 +1,9 @@
-body, html{
-    background: black;
+* {
+    font-family: candara;
+}
+
+body, html {
+    background: #000;
     margin: 0px;
     padding: 0px;
-}
-
-form {
-    width: 20vw;
-    min-width: 300px;
-    background: #FA9B2434;
-    position: relative;    
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%);
-    margin: auto;
-}
-
-.row input{
-    width: 100%;
-    border: 1px solid white;
-    height: 30px;
 }
