--- a/templates/index.html
+++ b/templates/index.html
@@ -3,24 +3,27 @@
 <head>
     <title>Welcome</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/stylesheet.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/index_stylesheet.css') }}" type="text/css">
 </head>
 
 <body>
     <header>
-
     </header>
     <div class="content-div">
-        <form action="check_login" method="POST">
-            <div class="row">
-                <input type="text" placeholder="Username" name="username">
-            </div>
-            <div class="row">
-                <input type="password" placeholder="Password" name="password">
-            </div>
-            <div class="row">
-                <input type="submit" value="Login with Instagram">
-            </div>
-        </form>
+        <div class="form-div">
+            <div class="home-logo-div"></div>
+            <form action="login" method="POST">
+                <div class="row">
+                    <input type="text" placeholder="Username" name="username">
+                </div>
+                <div class="row">
+                    <input type="password" placeholder="Password" name="password">
+                </div>
+                <div class="row">
+                    <input type="submit" value="Login with Instagram">
+                </div>
+            </form>
+        </div>
     </div>
     <footer>
         <p> Copyrights</p>
