--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -1,9 +1,10 @@
 * {
     font-family: candara;
+    color: #FFF;
 }
 
 body, html {
-    background: #000;
+    background: #0D0D0D;
     margin: 0px;
     padding: 0px;
 }
