--- a/templates/unfollowers.html
+++ b/templates/unfollowers.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<div class="home-logo-div">
-			<img src="../static/img/instagram-logo-home-white.png" height=50 />
+			<a href="home"><img src="../static/img/instagram-logo-home-white.png" height=50 /></a>
 		</div>
 		<div class="header-button-div">
 			<div class="profile-name-heading">
